add issue list releases will register issues based on commit message the pattern should be registered in application
